# mark

./: CMakeLists.txt  CMakeLists.txt.user.69a594a  attack.py  bin_2_dec.py  dec_2_bin.py  hmac.cpp  hmac.h  key.key  login.cpp  login.h  login.ui  main.cpp  number.cpp  number.h  widget.cpp  widget.h  widget.ui
